@@ -1,5 +1,7 @@
 package io.github.cursodsousa.sbootexpsecurity.config;
 
+import io.github.cursodsousa.sbootexpsecurity.domain.security.CustomAuthentication;
+import io.github.cursodsousa.sbootexpsecurity.domain.security.IdentificacaoUsuario;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -13,6 +15,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -27,8 +30,11 @@ public class CustomFilter extends OncePerRequestFilter {
 
         if(secretHeader != null){
             if(secretHeader.equals("secr3t")){
-                Authentication authentication = new UsernamePasswordAuthenticationToken(
-                        "Muito secreto", null, List.of(new SimpleGrantedAuthority("USER")));
+                IdentificacaoUsuario ide = new IdentificacaoUsuario();
+                ide.setNome("Usuario Secreto");
+                ide.setLogin("secret");
+                ide.setPermissoes(Arrays.asList("USER"));
+                Authentication authentication = new CustomAuthentication(ide);
 
                 SecurityContext securityContext = SecurityContextHolder.getContext();
                 securityContext.setAuthentication(authentication);
